modifications in frontend, and added modules resume analyzer etc.